# anydoor-refiners

./: .gitignore  README.md  data.ipynb  decode.ipynb  explore_attention.ipynb  inference.ipynb  lora.ipynb  preprocessing.ipynb  pyproject.toml  result_x.pt  script.py  test.ipynb  train_lora.ipynb
.github/workflows/: tests.yml
.github/workflows/actions/install_dependencies/: action.yml
AnyDoor/cldm/: cldm.py  ddim_hacked.py
AnyDoor/ldm/models/diffusion/: ddpm.py
AnyDoor/ldm/modules/: attention.py
AnyDoor/ldm/modules/diffusionmodules/: util.py
AnyDoor/ldm/modules/encoders/: modules.py
src/anydoor_original/: attention.py  cldm.py  control_net.py  controlled_unet.py  ddim.py  dinov2_encoder.py  lda.py  preprocessing.py  unet.py  util.py
src/anydoor_refiners/: __init__.py  attention.py  controlled_unet.py  controlnet.py  dinov2.py  lda.py  lora.py  model.py  postprocessing.py  preprocessing.py  unet.py
src/scripts/: gradio.py  inference.py  labelisation_ui.py  train.py
src/training/: configs.py  evaluator.py  trainer.py
src/training/data/: base.py  batch.py  vitonhd.py
src/utils/: weight_mapper.py
tests/: mocks.py  test_attention.py  test_controlled_unet.py  test_controlnet.py  test_unet.py
tests/tensors/: negative_object_embedding.pt  object_embedding.pt  x.pt
tests/weights_mapping/: control_net.json  cross_attention_block_2d.json  lda.json  unet.json
